phpAdsNew - ChangeLog


Openads 2.0.11
			+ Misc bugfixes
			  - 2007-01-22:  Fixed #50 - Stats conversion isn't working on some browsers  (Matteo)
			  - 2007-01-22:  Fixed #45 - Automaintenance could be triggered twice on Netscape 4 or even if it's disabled  (Matteo)
			  - 2007-01-22:  Fixed #52 - Endless loop in lib-view-query.inc.php under some circumstances  (Matteo)
			  - 2007-01-24:  Fixed #56 - Avoid multiple requests of adg.js when more adsense banners are delivered in the same page  (Matteo)

Openads 2.0.10
			+ Misc changes
			  - 2007-01-03:  Maintenance task now is performed during banner delivery if a cron job isn't correctly set up. The new feature is enabled by default and can be disabled in the administrator settings screen  (Matteo)
			  - 2007-01-09:  Added remote logo in the admin interface so that logo is automatically updated in case of name changes  (Matteo)
			  - 2007-01-10:  Added new Settings / Maintenance screen with status and information about scheduled and automatic maintenance  (Matteo)
			  - 2007-01-10:  Added support for click tracking Google AdSense banners when using IE or Firefox  (Matteo)
			  - 2007-01-11:  Removed PDF documentation and added links to on-line docs available at http:/docs.openads.org  (Matteo)
			  - 2007-01-15:  Added Opera compatibility to the Google AdSense click tracking code  (Arlen Coupland)

			+ Misc bugfixes
			  - 2006-11-14:  Campaign-edit wasn't correctly working with MySQL 3.x anymore  (Matteo)
			  - 2006-11-16:  Fixed file uploading with PHP5 and register_long_arrays disabled  (Matteo)
			  - 2006-11-21:  HTTP headers were not correctly passed to limitations when using XML-RPC invocation - bug #1598616  (Matteo)
			  - 2006-11-22:  Turkish language wasn't present in the dropdown list - bug #1600531  (Matteo)
			  - 2006-12-14:  Added missing continent mappings - bug #1602265  (Matteo)